--- a/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
+++ b/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
@@ -30,6 +30,7 @@
 
 \setlength\footnotesep{1em}
 
+%screws up word count for some reason:
 \bibliographystyle{$HOME/Documents/submissions/mynewapa} %apalike
 
 \maketitle
@@ -45,7 +46,9 @@ The counterexample arises because it is possible for agents to meet the conditio
  while conceiving of each other's actions only as constraints to work around and opportunities to exploit.
 Shared agency requires more than this, or so we argue.
 We also suggest a way of revising Bratman's account  that is consistent with his general approach.
-In some or all cases, shared agency differs from individual agency in part because shared agency involves changing perspective so that one’s own and other’s actions are conceived of as parts of a single plan.
+In some or all cases, shared agency differs from individual agency in part because shared agency involves 
+changing perspective 
+to conceive of your own and another's actions  as parts of a single plan.
 
 \end{abstract}
 
@@ -458,9 +461,9 @@ But philosophers' intuitions about shared agency may vary, so it would be better
 How else could we support the claim that Beatrice and Baldric lack a shared intention? 
 As mentioned at the start, 
 the contrast cases are often used to anchor intuitions in theorising about shared agency.
-In the next section we shall further support our claim by contrasting Beatrice and Baldric's case with a further case, one which is as similar as possible and which does seem to involve shared agency.
+In the next sections we shall further support our claim by contrasting Beatrice and Baldric's case with a further case, one which is as similar as possible and which does seem to involve shared agency.
 The fact that Beatrice and Baldric's case contrasts with this new case will support the claim that Beatrice and Baldric lack shared intention.
-This is the aim of the following section.
+This is the aim of the following sections.
 A further motive for introducing this new contrast case is that it provides an indication concerning what is missing from Bratman's account, and so may help us to understand why his conditions are not sufficient for shared intention.
 
 
@@ -472,7 +475,11 @@ Above we introduced what will turn out to be a counterexample to Bratman's accou
 But we have yet to show that this case really is a counterexample. 
 For all we have said so far, a proponent of Bratman's view might insist that Beatrice and Baldric do have a shared intention that they J$_1$.
 To show that they do not,
-we shall contrast Beatrice and Baldric's case with a third case that is as similar as possible but does involve shared intention. 
+we shall contrast Beatrice and Baldric's case with a third case that is as similar as possible but does involve shared intention (see Section \vref{sec:new_contrast_case}). 
+Before introducing this third case,
+we first need to introduce the notion of an agent-neutral plan and some background on planning.
+
+
 
 %---the following is a mistake (because Beatrice and Baldric do take each other's task into account.
 %It is unlikely that humans would spontaneously behave as Beatrice and Baldric do.%
@@ -480,7 +487,6 @@ we shall contrast Beatrice and Baldric's case with a third case that is as simil
 %This is nicely illustrated in a series of experiments by Sebanz and colleagues in which subject spontaneously take another's plans into account in planning their own actions, even where doing so is manifestly not required and can impair their performance  \citep{Sebanz:2003kf,Sebanz:2005fk,tsai:2011_groop_effect}.
 %}
 
-First we need to introduce the notion of an agent-neutral plan and some  observations.
 We stipulate that a planning process, or a plan, is \emph{agent-neutral} just if it does not involve identifying any particular agents.  
 This sort of planning is quite common.
 For example, some housemates who have decided to make a pizza might sit down together to plan what needs doing without yet assigning roles to particular individuals. 
@@ -529,7 +535,7 @@ agents each individually planning all of the agents' actions is coherent.
 
 
 If some agents each individually plan all of the agents' actions, 
-could they nevertheless know  that they will form plans that are sufficiently similar or jointly viable?%
+could they nevertheless know  that their various plans will be  sufficiently similar or jointly viable?%
 \footnote{
 \label{fn:df_jointly_viable}
 Suppose that, for some outcome, two or more agents each have a plan for the realisation of that outcome. 
@@ -550,17 +556,17 @@ Or consider two agents
  moving  a table from one room to another together, where there is an obviously optimal route and the agents' positions manifestly determine which ends of the tables they should hold.
 For these outcomes and situations,
  the agents' expertise and planning strategies 
- may mean that each could knowledgeably predict that they will form sufficiently similar agent-neutral plans.
+ may mean that each could knowledgeably predict that they will make sufficiently similar agent-neutral plans.
 And sometimes commonly known properties of the agents, such as their distribution in space or their sizes, mean that there is exactly one most obvious way of dividing up roles.
 %If  each agent also  knows enough about herself and the others to be able to determine, without communicating, whether her plan and role assignments will be acceptable to everyone, then
 % it need not be irrational for the agents each individually to plan all of the agents' actions. 
-In any such case, the agents who each individually plan all of the agents' actions may form sufficiently similar plans and know that they will do so.
+In any such case, the agents who each individually plan all of the agents' actions may end up with sufficiently similar plans and know that they will do so.
 
 
 Agents who will collaborate in some way, such as by making a pizza together, can coordinate their actions by each individually planning all of the agents' actions.
 Suppose some agents 
 	 are about to act together in order to bring about some outcome.
-They know (we stipulate) that if they each individually plan all of the agents' actions, they will form sufficiently similar plans.
+They know (we stipulate) that if they each individually plan all of the agents' actions, they will end up with sufficiently similar plans.
 Each agent also knows enough about herself and the others to be able to determine, without communicating, that the resulting plans will be acceptable to everyone. 
 And all of this is common knowledge to the agents.  
 Then these agents 
@@ -587,7 +593,7 @@ a plan for one agent's actions would need to be constrained by, and to constrain
 When, for example,
 two people are about to move a heavy table from one room to the next,
 two separate plans for their individual actions would have to involve compatible timings, forces and routes.
-In principle,  each table-lifter might form an initial plan for her own actions only.
+In principle,  each table-lifter might make an initial plan for her own actions only.
 Each could use her initial plan to make predictions about the  other's likely actions.
 She could then revise the plan for her own actions in the light of these predictions.
 This cycle of prediction and revision might be repeated.
@@ -604,46 +610,116 @@ We don't claim that this is the only or best way to coordinate.
 Our claim is just that some agents sometimes achieve coordination in part by means of each agent's individually planning all of the agents' actions.%
 \footnote{
 As an aside, we note that 
-\citet{tsai:2011_groop_effect} provide evidence indicating that planning for one's own and and others' actions happens not only in conscious practical reasoning but also in planning that we may not ordinarily be directly aware of.
+\citet{tsai:2011_groop_effect} provide evidence indicating that planning for your own and and others' actions happens not only in conscious practical reasoning but also in planning that you may not ordinarily be directly aware of.
 }
 
 Now recall Beatrice and Baldric (from Section \vref{sec:the_counterexample}).
-We said earlier that  they each see the other's actions  as constraints to work around or opportunities to exploit only.
-This is because each agent plans only her own actions.
-Neither agent plans for both of their actions and so neither conceives of both of their actions as parts of a single plan.
+We said earlier that  they each see the other's intentions and actions  as constraints to work around or opportunities to exploit only.
+This is because neither agent plans all of their actions and so neither conceives of both her own and the other's actions as parts of a single plan.
 In constructing a case that contrasts with Beatrice and Baldric's we shall rely on the distinction between
-a plan that includes both one's own and others' actions
+a plan that includes both your own and another's actions
 and 
-a plan that merely exploits, and is constrained by, predictions about the others' actions.
+a plan that merely exploits, and is constrained by, predictions about the other's actions.
 This distinction matters independently of whether two such plans would result in different actions.
 It matters because 
-forming a plan for your own and others' actions 
+making a plan for your own and another's actions 
 	involves changing perspective.
-That is, it involves conceiving of the others' actions not only as constraints and opportunities, but as on a par with your own actions insofar as your actions and theirs are elements in a single plan directed to a single outcome.
+That is, it involves conceiving of the other's actions not only as constraints and opportunities, but as on a par with your own actions insofar as your actions and their actions are elements in a single plan directed to a single outcome.
 
-In the case of ordinary, individual agency,
-there is a familiar and  important distinction between merely predicting one's own actions and planning them.%
+Note that our key distinction is not between merely predicting and planning another agent's actions.
+Beatrice and Baldric each intend to make the cross hit the red square (that is, to J${_1}$) in accordance with, and in part because of, each other's intentions.
+So when Beatrice predicts what Baldric will do, she can rely on facts about his intentions.
+She may even make predictions by planning his actions,
+and Baldric may likewise predict Beatrice's actions by planning them.
+So we can suppose that each plans the other's actions as well as separately planning her own actions,
+and that these two planning activities constrain each other.
+But---and this is our key distinction---neither makes a single plan for both her own and the other's actions.
+
+
+
+\section{One Plan or Two?}
+The distinction between making a single plan and making two separate plans may initially seem too subtle to be useful, 
+especially as 
+the two separate plans may be interdependent.
+Further, if two separate plans could both be executed (not just each plan but both together), then they can be combined into a single plan.
+The combined plan is simply to implement each of the two formerly separate plans. 
+Given these apparent grounds for scepticism,
+in this section we shall explain why the distinction between making a single plan and making two separate plans matters.
+
+
+***First,
+the fact that two separate \emph{plans} can be combined doesn't undermine the distinction between \emph{making} a single plan and \emph{making} two separate plans.
+To see why consider structure ...
+[... but the really deep point is not about structure: it's about keeping plans separate meaning adopting a predictive rather than a deliberative perspective towards the actions ...]
+
+Let us step back from shared agency  
+ to consider how 
+ the distinction between making a single plan and making two separate plans
+  applies in cases of ordinary, individual agency.
+Suppose you have to organise two events, a workshop and a wedding.
+If the two events were largely independent of each other,
+it would be simplest to make two separate plans for them.
+But in this case there are all kinds of constraints linking the two events.
+Some participants at the workshop are also wedding guests,
+and it happens that many choices of transport, entertainment and catering for one event constrain possible choices for the other event.
+In principle you could handle these by making two separate plans where, at any stage of your planning, making one plan involves treating the other plan as providing constraints to work around and opportunities to exploit.
+But envisaging the complex interdependence of these two plans  
+might reasonably incline you to make a single plan for the wedding and workshop.
+Making a single plan can be simpler because it allows for structuring the requirements differently.
+For instance, if you have two separate plans, you will need subplans for transport in each plan and so are forced to divide the problem of transporting participants into the problem of transporting them for the workshop and the problem of transporting them for the wedding.
+Having a single plan for both events allows you to treat transport as a single problem (but it does not require you to do so, of course).
+As this indicates, the distinction between making a single plan and making two separate but interdependent plans is not merely notional.
+Agents can have reasons for making a single plan rather than two separate ones.
+
+This claim needs qualification, however.
+It might be held that single agents always combine all plans for their own actions ... unity of their plans ... leads to the Moran point ***
+
+ 
+ 
+There is a familiar and  important distinction between merely predicting your own actions and planning them.%
 %
 \footnote{
-Even Velleman, who argues that `[d]eciding on an action … is just a peculiar way of predicting it' (\citeyear[p.\ 48]{Velleman:1985mc}), can accommodate a distinction between merely predicting and planning actions \citep[see][p.\ 195]{Velleman:2000fq}.
-%“How can one regard a proposition as true in such a way as to make it true? Well, when one accepts a proposition in response to its truth, one registers the influence of evidence and other reasons for belief, thereby manifesting an incli-nation to conform one’s acceptance to the facts. Accepting a proposition in such a way as to make it true would simply require a converse inclination, to conform the facts to one’s acceptance. And one can indeed be inclined to conform the facts to one’s acceptance, if the proposition accepted is about one’s own behavior. One need only be inclined to do what one accepts that one will do. If one has this inclination, then accepting that one will do something can be a way of making this proposition true, and it can therefore be an attempt at accepting the truth.”  (195)
+Even Velleman, who argues that `[d]eciding on an action … is just a peculiar way of predicting it' (\citeyear[p.\ 48]{Velleman:1985mc}), can accommodate a distinction between merely predicting and planning actions.
+In his terms, we might say that 
+planning involves not merely predicting but also being inclined to make the prediction true \citep[see][p.\ 195]{Velleman:2000fq}.
+%“How can one regard a proposition as true in such a way as to make it true? Well, when one accepts a proposition in response to its truth, one registers the influence of evidence and other reasons for belief, thereby manifesting an inclination to conform one’s acceptance to the facts. Accepting a proposition in such a way as to make it true would simply require a converse inclination, to conform the facts to one’s acceptance. And one can indeed be inclined to conform the facts to one’s acceptance, if the proposition accepted is about one’s own behavior. One need only be inclined to do what one accepts that one will do. If one has this inclination, then accepting that one will do something can be a way of making this proposition true, and it can therefore be an attempt at accepting the truth.”  (195)
 }
 %
-It is possible and perhaps sometimes useful to make predictions about one's future actions, of course.
-But to rely on predictions about one's own actions in planning can involve a kind of estrangement from oneself \citep[compare][]{Moran:2001hr}.
-We have just been arguing that 
-in the case of shared agency,
-the distinction between predicting and planning actions also applies to the actions of agents other than oneself.
+It is possible and perhaps sometimes useful to make predictions about your future actions, of course.
+%*nb 'your ... oneself' issue in this sentence:
+But to rely on mere predictions about your own actions in planning can involve a kind of estrangement from oneself \citep[compare][]{Moran:2001hr}.
+
+
+
+We are arguing that 
+something similar applies in the case of shared agency, 
+except that here the distinction between predicting and planning actions also applies to others' actions.
+
 
 Applying this distinction in cases of shared agency requires additional subtlety, of course.
 After all,
-one agent cannot rationally include another's actions in a plan she knows she will act on unless she could predict the other's actions.
-(Or unless she knows the other agent will act directly on the first's intentions---see \citet{roth_shared_agency}.) 
+you cannot rationally include another's actions in a plan you know you will act on unless you could predict the other's actions.%
+%
+\footnote{
+This statement requires qualification if, as \citet{roth_shared_agency} argues, 
+another agent might act directly on your intentions. 
+As the cases we are considering involve agents in symmetric roles, we can ignore that possibility here.
+We acknowledge, however, that Roth's idea has inspired the less radical view defended in this section.
+}
+%
 This fact should not obscure the distinct ways in which one conceives of another agent's actions in planning and predicting them, however.
 For, as we have argued, in some cases planning another agent's actions does not require actually predicting them.
 In some cases, planning another's actions does not depend on having predicted them but rather provides a ground for prediction.
-This is why there is a difference in perspective between merely predicting another's actions and conceiving of them as on a par with one's own in being elements of a single plan.
- 
+This is why 
+different perspectives are involved in 
+	merely predicting another's actions 
+	and 
+	conceiving of her actions and  your own actions as elements of a single plan.
+	
+	
+	
+\section{A New Contrast Case}
+\label{sec:new_contrast_case}
 Now that we have some background on how some agents might each individually plan all of the agents' actions,
 we can introduce a third and final case.
 This case needs to be as similar as possible to Beatrice and Baldric's while involving shared agency.
@@ -779,7 +855,7 @@ We shall suggest a further requirement that is compatible with this one.
 We stipulate that an activity is \emph{distributed} just if: 
 \begin{enumerate}[label=\emph{\alph*})]
 \item 	there is a single outcome, G,
-	and two or more agents each have a plan for G which specifies a role for all of the agents;	
+	and two or more agents each have a plan for G which specifies  roles for all of the agents;	
 \item 	these plans are identical or compatible,%
 \footnote{
 The notion of compatibility is defined in footnote \vref{fn:df_compatible}.
@@ -806,7 +882,7 @@ As the activity unfolds in this way, each gradually adds details to her plan and
 
 Distributed activities can be simple.
 In walking to a metro station together,
-two friends may each form and act on a plan that specifies some details of both of their actions.
+two friends may each make and act on a plan that specifies some details of both of their actions.
 This is enough for their activity to be distributed in the above sense.
 
 When two or more agents each intend that they do something, 
@@ -920,7 +996,7 @@ This enables us to capture the idea that agents acting on a shared intention con
 
 No amount of forming intentions about other's intentions and acting on knowledge of such intentions is sufficient, all by itself, for shared intention.  
 In many or all cases, shared agency requires changing perspective 
-to conceive of one's own and others' intentions and actions as parts of a single plan.
+to conceive of your own and another's intentions and actions as parts of a single plan.
 
 
 \bibliography{$HOME/endnote/phd_biblio}
