--- a/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
+++ b/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
@@ -463,8 +463,10 @@ As mentioned at the start,
 the contrast cases are often used to anchor intuitions in theorising about shared agency.
 In the next sections we shall further support our claim by contrasting Beatrice and Baldric's case with a further case, one which is as similar as possible and which does seem to involve shared agency.
 The fact that Beatrice and Baldric's case contrasts with this new case will support the claim that Beatrice and Baldric lack shared intention.
-This is the aim of the following sections.
-A further motive for introducing this new contrast case is that it provides an indication concerning what is missing from Bratman's account, and so may help us to understand why his conditions are not sufficient for shared intention.
+This is the proximal aim of the following sections.
+A more distal aim 
+is to understand why Bratman's conditions are not sufficient for shared intention
+and, relatedly, to provide materials for fixing his account.
 
 
 
@@ -476,8 +478,8 @@ But we have yet to show that this case really is a counterexample.
 For all we have said so far, a proponent of Bratman's view might insist that Beatrice and Baldric do have a shared intention that they J$_1$.
 To show that they do not,
 we shall contrast Beatrice and Baldric's case with a third case that is as similar as possible but does involve shared intention (see Section \vref{sec:new_contrast_case}). 
-Before introducing this third case,
-we first need to introduce the notion of an agent-neutral plan and some background on planning.
+Before we can introduce this third case,
+we first need some background on planning.
 
 
 
@@ -493,7 +495,9 @@ For example, some housemates who have decided to make a pizza might sit down tog
 Someone needs to prepare the dough, 
 another person should prepare toppings,
 while a third might mix some salad.
-In so planning, each housemate is thinking about what is to be done and not what she herself will do.  
+In so planning, each housemate is thinking about what 
+agents in their situation should do 
+and not what she herself or anyone in particular will do.  
 %(This is an idealisation, of course.)
 At some point the housemates stop planning.
 (This does not necessarily mean that they have a fully worked out plan; like any other plans, agent-neutral plans can have gaps that may need filling in later.)
@@ -530,50 +534,78 @@ then they would have each individually planed all of the agents' actions.
 
 For all we have said,  agent-neutral plans might not be involved in all cases where some agents each individually plan all of the agents' actions.
 We invoke agent-neutral plans only as an aid to showing that the notion of some 
-agents each individually planning all of the agents' actions is coherent.
+agents each individually planning all of the agents' actions is theoretically coherent.
 
 
+But why would some agents ever each individually plan all of the agents' actions?
+One might suppose that this would occur only when each agent thinks that she in charge, or is fantasizing about controlling the others.
+If you know you aren't the boss and aren't going to decide what another agent will do, why  make a plan for that agent's actions as well as your own?
+Why not just plan your own actions?
+As we shall now explain, 
+one reason why some agents might each plan all of the agents' actions 
+	even when there is manifestly no leader and the agents all have the same status
+	is that doing so provides one way to solve a coordination problem.
+%%having agents each individually plan all of the agents' actions
+%can be a way of achieving coordination even where there is no leader and the agents all have the same status.
 
-If some agents each individually plan all of the agents' actions, 
-could they nevertheless know  that their various plans will be  sufficiently similar or jointly viable?%
+%How could  this work?
+Sometimes a plan for your own actions needs to be constrained by, and to constrain, plans for other agents' actions.
+When, for example,
+you and someone else are about to move a heavy table from one room to another,
+there are constraints 
+on relations between
+	your actions
+	and
+	the other's actions.
+These relational constraints concern timings, forces, choices of route and more besides.
+Now meeting such relational constraints does not in principle require you to plan actions other than your own.
+In principle,  you  might make an initial plan for your own actions only.
+You could use you initial plan to make predictions about the  other's likely actions,
+and then revise this initial plan for your actions in the light of these predictions about the other's actions.
+This cycle of prediction and revision might be repeated.
+Your plan might also involve conditional elements to accommodate unpredicted actions.
+So if you plan your own actions only,
+ you will need to rely on predictions about what the other will do,
+ and these predictions will sometimes depend on what you plan to do.
+But there is another way to proceed,
+one which avoids the need for a plan that depends on predictions which in turn depend on the plan.
+For you can use the same planning processes which enable you to meet constraints on relations between two of your own actions
+	in order to meet constraints on relations between your own and the other's actions.
+That is, you could make a single plan for both your own and the other's actions.
+(You might do this by first making an agent-neutral plan and then assigning roles.)
+Making a single plan for your actions and the other's actions is a way of using your planning abilities to meet relational constraints.
+Of course, 
+this is only rational  if you are in a position to know that your plan for the other's actions will be sufficiently similar to her own plan for her actions.
+And it is unlikely that you could know this if 
+	you and the other agent differed too much in expertise,
+	if there were two or more equally good ways to achieve the outcome you are planning,
+	or if there were two or more equally good ways to assign roles.
+But suppose that you and the other person have similar expertise in moving furniture, 
+	that there is obviously exactly one most optimal route,
+	 and that your positions in space manifestly determine which ends of the table you should each hold and so which role each of you should play. 
+Then it is likely that you could  be in a position to know,
+	even without communication,
+	that your plan for the other agent's actions will nearly enough coincide with her own plan for her actions.
+So  making a single plan for your actions and the other's actions can be a way of 
+	working out how to 
+	meet constraints on the relation between your actions and hers and so of achieving coordination.  
+(Note that, as already mentioned,  we don't claim that this  is the only or best way to achieve coordination.)	
+And, clearly, this applies equally to the 
+ other person you are lifting the table with.
+ She  could work out how to coordinate her actions with yours by likewise making a single plan for her actions and yours.%
 \footnote{
-\label{fn:df_jointly_viable}
-Suppose that, for some outcome, two or more agents each have a plan for the realisation of that outcome. 
-%(These plans may, but need not, specify roles for all of the agents; but the plans must be agent-specific, not agent-neutral.)
-We stipulate that these plans are  \emph{jointly viable} just if
-the plan which involves each agent performing the roles she is assigned in her own plan is acceptable to all the agents and a viable means of realising the outcome.
-For an example of jointly viable but significantly different plans, suppose that our task is to transport some apples and pears to a warehouse. 
-My plan involves you taking care of the apples while I put the pears into the yellow crates and load them into the van through the side door.
-If your plan involves me taking care of the pears while you put the apples into the green crates and load them into the van through the rear doors, then our plans are compatible.
-Consider also a case in which our task is to press a button simultaneously. 
-If your plan is that each of us will to start to act in exactly 60 seconds whereas my plan specifies that you are the leader and we will start to act when you do, then our plans are jointly viable.
+As an aside, we note that 
+\citet{tsai:2011_groop_effect} provide evidence indicating that planning for your own and and others' actions happens not only in conscious practical reasoning but also in planning that you may not ordinarily be directly aware of.
 }
-%Where the agents could bring about an outcome in several different, equally good ways,
-%having some agents each individually plan all of the agents' actions is probably not useful.
-Consider housemates
-	making a pizza together, where everyone knows roughly the same recipe and differences are unlikely to matter.
-Or consider two agents 
- moving  a table from one room to another together, where there is an obviously optimal route and the agents' positions manifestly determine which ends of the tables they should hold.
-For these outcomes and situations,
- the agents' expertise and planning strategies 
- may mean that each could knowledgeably predict that they will make sufficiently similar agent-neutral plans.
-And sometimes commonly known properties of the agents, such as their distribution in space or their sizes, mean that there is exactly one most obvious way of dividing up roles.
-%If  each agent also  knows enough about herself and the others to be able to determine, without communicating, whether her plan and role assignments will be acceptable to everyone, then
-% it need not be irrational for the agents each individually to plan all of the agents' actions. 
-In any such case, the agents who each individually plan all of the agents' actions may end up with sufficiently similar plans and know that they will do so.
 
-
-Agents who will collaborate in some way, such as by making a pizza together, can coordinate their actions by each individually planning all of the agents' actions.
-Suppose some agents 
-	 are about to act together in order to bring about some outcome.
-They know (we stipulate) that if they each individually plan all of the agents' actions, they will end up with sufficiently similar plans.
-Each agent also knows enough about herself and the others to be able to determine, without communicating, that the resulting plans will be acceptable to everyone. 
-And all of this is common knowledge to the agents.  
-Then these agents 
-might individually plan all of the agents' actions,
-and each might rationally perform her part in her plan, knowing that the others will do likewise.
-In this way, 
- some agents' individually planning all of the agents' actions can rationally coordinate their plans and actions.%
+The question was why some agents would each individually plan all of the agents' actions.
+We have just argued that  
+one reason is that
+doing this would sometimes enable the agents to solve a coordination problem.
+Agents who will collaborate in an activity, such as moving a table or making a pizza, 
+can sometimes individually plan all of the agents' actions,
+knowing that each agent's plan is sufficiently similar to the other agents' plans.
+And sometimes each can rationally perform her part in her plan for all of the agent's actions, knowing that the others will do likewise.%
 \footnote{
 Note that this coordination is achieved without presupposing that the agents exercise shared agency.
 Of course,
@@ -583,35 +615,6 @@ Of course,
 But this shared agency is a consequence of, not a requirement on, their individually planning all of the agents' actions.
 }
 
-
-But why would some agents each individually plan all of the agents' actions?
-After all, no agent gets  to perform  others' actions
-(or, if they do, this is exceptional).
-So why would anyone individually plan others' actions, knowing that she won't perform them?
-In many cases, 
-a plan for one agent's actions would need to be constrained by, and to constrain, plans for other agents' actions.
-When, for example,
-two people are about to move a heavy table from one room to the next,
-two separate plans for their individual actions would have to involve compatible timings, forces and routes.
-In principle,  each table-lifter might make an initial plan for her own actions only.
-Each could use her initial plan to make predictions about the  other's likely actions.
-She could then revise the plan for her own actions in the light of these predictions.
-This cycle of prediction and revision might be repeated.
-The plans might also involve conditional elements to accommodate unpredicted actions.
-So when an agent plans only her own actions,
- she will sometimes need to rely on predictions about what others will do,
- and these predictions will sometimes depend on what the agent plans to do.
-Another 
- way to proceed
-	would be for the agent to plan all of the agents' actions,
-perhaps by first making an agent-neutral plan and then assigning roles.
-So the reason why some agents might each plan all of the agents' actions is that doing so provides one way to solve a coordination problem.
-We don't claim that this is the only or best way to coordinate.
-Our claim is just that some agents sometimes achieve coordination in part by means of each agent's individually planning all of the agents' actions.%
-\footnote{
-As an aside, we note that 
-\citet{tsai:2011_groop_effect} provide evidence indicating that planning for your own and and others' actions happens not only in conscious practical reasoning but also in planning that you may not ordinarily be directly aware of.
-}
 
 Now recall Beatrice and Baldric (from Section \vref{sec:the_counterexample}).
 We said earlier that  they each see the other's intentions and actions  as constraints to work around or opportunities to exploit only.
@@ -637,7 +640,7 @@ But---and this is our key distinction---neither makes a single plan for both her
 
 
 
-\section{One Plan or Two?}
+\section{Why Making One Plan or Two Matters}
 The distinction between making a single plan and making two separate plans may initially seem too subtle to be useful, 
 especially as 
 the two separate plans may be interdependent.
