--- a/developing mind/proposal developing mind.tex
+++ b/developing mind/proposal developing mind.tex
@@ -78,7 +78,7 @@ This question goes back to Plato or earlier and remains unanswered.
 %So far no one has convincingly answered the question, but two major breakthroughs have been made in the last three decades or so.
 Two recent scientific breakthroughs appear to bring us closer to an answer, and to show that the question is even less straightforward than previously  assumed.
 The first breakthrough concerns social interaction;
-is the discovery that preverbal infants enjoy surprisingly rich social abilities.
+it is the discovery that preverbal infants enjoy surprisingly rich social abilities.
 These abilities enable infants to engage in some forms of social interaction. 
 This may well facilitate the subsequent acquisition of linguistic abilities and enable the emergence of knowledge \citep[e.g.][]{Csibra:2009xr,Meltzoff:2007pj,Tomasello:2005wx}. 
 A second breakthrough involves the use of increasingly sensitive---and sometimes controversial---methods to detect  expectations without relying on subjects' abilities to talk or act.  
