--- a/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation.tex
+++ b/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation.tex
@@ -119,7 +119,7 @@ So, to return to the contrast cases,
 how do activities involving shared agency differ from activities involving parallel agency only? 
 
 The first example shows that the difference between shared agency and parallel individual agency can’t just be that the resulting actions have a common effect because merely parallel actions can have common effects too. 
-And the second example shows that the difference can’t just be a matter of coordination, because people who are merely happen to be walking side by side each other also need to coordinate their actions in order to avoid colliding.  
+And the second example shows that the difference can’t just be a matter of coordination, because people who merely happen to be walking side by side each other also need to coordinate their actions in order to avoid colliding.  
 Apparently, then, systematically distinguishing cases of shared agency from cases of parallel but merely individual agency  requires reflection on agents' mental states.
 
 
